--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -28,6 +28,15 @@
           >Events</a
         >
       </li>
+      <li>
+        <a
+          *ngIf="auth.loggedIn && auth.isAdmin"
+          routerLink="/admin"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          >Admin</a
+        >
+      </li>
     </ul>
   </nav>
 </header>
