--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -1,5 +1,5 @@
-<!-- src/app/pages/event/event.component.html -->
 <app-loading *ngIf="loading"></app-loading>
+
 <ng-template [ngIf]="utils.isLoaded(loading)">
   <h1 class="text-center">{{ pageTitle }}</h1>
   <!-- Event -->
@@ -8,6 +8,7 @@
     <p *ngIf="eventPast" class="alert alert-danger">
       <strong>This event is over.</strong>
     </p>
+
     <div class="card">
       <!-- Event tab navigation -->
       <div class="card-header">
@@ -32,15 +33,22 @@
           </li>
         </ul>
       </div>
+
       <!-- Event detail tab -->
       <app-event-detail
         *ngIf="utils.tabIs(tab, 'details')"
         [event]="event"
       ></app-event-detail>
+
       <!-- Event RSVP tab -->
-      <app-rsvp *ngIf="utils.tabIs(tab, 'rsvp')"></app-rsvp>
+      <app-rsvp
+        *ngIf="utils.tabIs(tab, 'rsvp')"
+        [eventId]="event._id"
+        [eventPast]="eventPast"
+      ></app-rsvp>
     </div>
   </ng-template>
+
   <!-- Error loading events -->
   <p *ngIf="error" class="alert alert-danger">
     <strong>Oops!</strong> There was an error retrieving information for this
