Added event forms

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -37,6 +37,14 @@
           >Admin</a
         >
       </li>
+      <li>
+        <a
+          *ngIf="auth.loggedIn && auth.isAdmin"
+          routerLink="/admin/event/new"
+          routerLinkActive="active"
+          >Create Event</a
+        >
+      </li>
     </ul>
   </nav>
 </header>
