App complete trying for HEroku Deployment

--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -1,11 +1,18 @@
-<!-- src/app/pages/admin/admin.component.html -->
 <h1 class="text-center">{{ pageTitle }}</h1>
 <app-loading *ngIf="loading"></app-loading>
+
 <ng-template [ngIf]="utils.isLoaded(loading)">
   <p class="lead">
     Welcome, {{ auth.userProfile?.name }}! You can create and administer events
     below.
   </p>
+
+  <p>
+    <a class="btn btn-success btn-block" routerLink="/admin/event/new"
+      >+ Create New Event</a
+    >
+  </p>
+
   <!-- Events -->
   <ng-template [ngIf]="eventList">
     <ng-template [ngIf]="eventList.length">
@@ -32,6 +39,7 @@
           </button>
         </span>
       </div>
+
       <!-- No search results -->
       <p
         *ngIf="fs.noSearchResults(filteredEvents, query)"
@@ -40,6 +48,7 @@
         No events found for <em class="text-danger">{{ query }}</em
         >, sorry!
       </p>
+
       <!-- Events listing -->
       <section class="list-group">
         <div
@@ -69,14 +78,29 @@
             <strong>Date:</strong>
             {{ utils.eventDates(event.startDatetime, event.endDatetime) }}
           </p>
+          <p class="mb-1">
+            <a
+              class="btn btn-info btn-sm mr-1"
+              [routerLink]="['/admin/event/update', event._id]"
+              >Edit</a
+            >
+            <a
+              class="btn btn-danger btn-sm"
+              [routerLink]="['/admin/event/update', event._id]"
+              [queryParams]="{ tab: 'delete' }"
+              >Delete</a
+            >
+          </p>
         </div>
       </section>
     </ng-template>
+
     <!-- No events available -->
     <p *ngIf="!eventList.length" class="alert alert-info">
       No events have been created yet.
     </p>
   </ng-template>
+
   <!-- Error loading events -->
   <p *ngIf="error" class="alert alert-danger">
     <strong>Oops!</strong> There was an error retrieving event data.
