--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,17 +7,18 @@
       <a routerLink="/">RSVP</a>
     </h1>
     <div class="header-page-authStatus">
-      <span *ngIf="auth.loggingIn">Logging in... </span>
+      <span *ngIf="auth.loggingIn">Logging in...</span>
       <ng-template [ngIf]="!auth.loggingIn">
-        <a *ngIf="!auth.loggedIn" (click)="auth.login()"> Log in </a>
+        <a *ngIf="!auth.loggedIn" (click)="auth.login()">Log In</a>
         <span *ngIf="auth.loggedIn && auth.userProfile">
-          {{ auth.userProfile.name }}
+          <a routerLink="/my-rsvps">{{ auth.userProfile.name }}</a>
           <span class="divider">|</span>
           <a (click)="auth.logout()">Log Out</a>
         </span>
       </ng-template>
     </div>
   </div>
+
   <nav id="nav" class="nav" role="navigation">
     <ul class="nav-list">
       <li>
@@ -26,6 +27,14 @@
           routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }"
           >Events</a
+        >
+      </li>
+      <li>
+        <a
+          *ngIf="auth.loggedIn"
+          routerLink="/my-rsvps"
+          routerLinkActive="active"
+          >My RSVPs</a
         >
       </li>
       <li>
